- O `/fazendinha silo` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha entregas` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha feira comprar` foi atualizado para os novos componentes V2 do Discord.
- O `/loja comprar sementes` foi atualizado para os novos componentes V2 do Discord.
- A planta `Tomate` foi renomeada para `Feijão`.
- A planta `Banana` foi renomeada para `Cebola`.
- A planta `Limão` foi renomeada para `Mirtilo`. 
- A planta `Melancia` foi renomeada para `Limão`.
- As plantas `Morango` e `Maçã` tiveram suas posições de raridade alteradas.

## Fixed

- Corrigido os itens mágicos ainda aparecerem na loja para serem comprados, mesmo já tendo eles - Reportado por @mareys.

### Removed

- Removido o comando `/fazendinha administrar silo`.
- Removido o comando `/fazendinha administrar campos`.
- Removido o comando `/fazendinha administrar feira`.

## [6.1.5] - 2025-12-17

### Fixed

- Corrigido erro ao colher plantações, por conta de silo cheio.

## [6.1.4] - 2025-12-04

### Changed

- O comando `/estatísticas fazendeiro` agora mostra a experiência da fazendinha - Sugerido por @kawajplemes7. 
- O comando `/loja comprar itens` agora mostra a descrição do que os itens fazem - Sugerido por @rafaelxd27.

### Fixed

- Corrigido o comando `/loja vender plantas` quando o silo possui 25 plantas diferentes.

## [6.1.3] - 2025-11-28

### Fixed

- Corrigido parcialmente o problema de plantas ficarem negativas no silo. Agora caso aconteça, um erro será gerado.

## [6.1.2] - 2025-11-06

### Fixed

- Corrigido o comando `/personalizar badges`, que falhava com usuários que possuem a badge de 5 anos com a Menhera.

## [6.1.1] - 2025-11-05

### Fixed

- Corrigido o comando `/trisal formar`, que dependendo do tamanho do nome do usuário, não funcionava.

## [6.1.0] - 2025-11-04

### Fixed

- Corrigido um problema no comando `/fazendinha feira comprar` que fazia com que o comando só não respondesse.

### Removed
